--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Better Motherfucking Website</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\Hery Mirindra\Desktop\mardi\BetterMotherFuckingWebsite\css\style.css">
 </head>
 
     <body>
