--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Better Motherfucking Website</title>
-    <link rel="stylesheet" type="text/css" href="..\css\style.css">
+    <link rel="stylesheet" type="text/css" href="\css\style.css">
 </head>
 
     <body>
@@ -52,7 +52,9 @@
             out there need to make them not total shit.</p>
         <blockquote>"You're a fucking moron if you use default browser styles."
             <br>
-            - Eleanor Roosevelt</blockquote>
+            - Eleanor Roosevelt
+        </blockquote>
+        
         <hr>
         <h2>Epilogue</h2>
         <p>Inspired by the geniuses behind <a href="http://motherfuckingwebsite.com/">motherfuckingwebsite.com</a> and <a
