--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Better Motherfucking Website</title>
-    <link rel="stylesheet" type="text/css" href="\css\style.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Better Motherfucking Website</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
 
     <body>
 
